Changed URL and url path to images

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <p>Systemutvecklare</p>
         </div>
         <div class="headerpicture">
-            <a href="https://github.com/RickardVMiun"><img
-                    src="C:\DevProjects\personalwebsite\images\GitHub-Mark-120px-plus.png"></a>
-                    <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img src="C:\DevProjects\personalwebsite\images\linkedin-icon-1.svg"></a>
+            <a href="https://github.com/RKMV8"><img
+                    src="/images/GitHub-Mark-120px-plus.png"></a>
+                    <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img src="/images/linkedin-icon-1.svg"></a>
         </div>
         <div class="headerdarkmode">
             <p>Lightmode</p>
