--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="headerpicture">
             <a href="https://github.com/RKMV8"><img
-                    src="/images/GitHub-Mark-120px-plus.png"></a>
-                    <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img src="/images/linkedin-icon-1.svg"></a>
+                    src="images/GitHub-Mark-120px-plus.png"></a>
+                    <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img src="images/linkedin-icon-1.svg"></a>
         </div>
         <div class="headerdarkmode">
             <p>Lightmode</p>
