Minor changes to the ToggleDarkMode() function, a bit of refactoring

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img src="images/linkedin-icon-1.svg"></a>
         </div>
         <div class="headerdarkmode">
-            <p>Lightmode</p>
+            <p id="lightbuttontext">Lightmode</p>
             <label class="switch">
                 <input id="check" type="checkbox" onclick="ToggleDarkMode()">
                 <span class="slider round"></span>
@@ -33,13 +33,11 @@
     </header>
     <div class="maincontainer">
         <div class="item1">
-            <h1>Vem är jag?</h1>
+            <h1 id="item1h1">Vem är jag?</h1>
             <div class="aboutme">
                 <div class="aboutmetext">
-                    <p>33-årig norrlänning med ett brinnande it-intresse och en ständig törst efter att lära mig nya
-                        saker. Min fritid spenderas tillsammans med familjen som består av mina barn och min sambo. Born
-                        and raised i Hammarstrand, men har haft små detours till bland annat Stockholm och Göteborg. Har
-                        sedan länge landat i Östersund och det känns denna gång permanent.</p>
+                    <p id="item1p">33-årig jämtlänning med ett brinnande it-intresse och en ständig törst efter att lära mig nya
+                        saker. Min fritid spenderas tillsammans med familjen som består av mina barn och min sambo. Född och uppvuxen i Östersund, har provat livet i storstaden (Stockholm & Göteborg) men kommit fram till att jag hellre lever mitt liv i Jämtland!</p>
                 </div>
             </div>
         </div>
@@ -135,5 +133,4 @@
         </div>
     </div>
 </body>
-
 </html>
