Further darkmode adjustments and added repo links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <div class="headertext">
-            <h1>Rickard Vikström</h1>
-            <p>Systemutvecklare</p>
+            <h1 id="dms">Rickard Vikström</h1>
+            <p id="dms">Systemutvecklare</p>
         </div>
         <div class="headerpicture">
             <a href="https://github.com/RKMV8"><img
@@ -91,13 +91,13 @@
     </div>
     </div>
     <div class="projectbanner">
-        <h1>Projekt</h1>
+        <h1 id="dms">Projekt</h1>
     </div>
 
     <div class="projects">
         <div class="project1">
             <div class="project1title">
-                <h3><i class="fa fa-github" aria-hidden="true"></i>Projekt 1: Aimtracker Filter</h3>
+                <a href="https://github.com/RKMV8/AimtrackFilter"><h3><i class="fa fa-github" aria-hidden="true"></i>Projekt 1: Aimtracker Filter</h3></a>
             </div>
             <div class="project1image"><img src="https://i.imgur.com/zzHuQM0.png"></div>
             <div class="project1description">
@@ -122,7 +122,7 @@
         </div>
         <div class="project3">
             <div class="project3title">
-                <h3><i class="fa fa-github" aria-hidden="true"></i>Projekt 3: Cineasterna</h3>
+                <a href="https://github.com/RKMV8/Cineast"><h3><i class="fa fa-github" aria-hidden="true"></i>Projekt 3: Cineasterna</h3></a>
             </div>
             <div class="project3image"><img src="https://i.imgur.com/l1JVokY.png"></div>
             <div class="project3description">
