Optimized images a bit by using jpg instead of png

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="project1title">
                 <a href="https://github.com/RKMV8/AimtrackFilter"><h3><i class="fa fa-github" aria-hidden="true"></i>Projekt 1: Aimtracker Filter</h3></a>
             </div>
-            <div class="project1image"><img src="https://i.imgur.com/zzHuQM0.png"></div>
+            <div class="project1image"><img src="https://i.imgur.com/6RoIEE2.jpg"></div>
             <div class="project1description">
                 <p>Projektet gick ut på att vi skulle använda existerande skjutstatistik från skidskyttar och skapa
                     förutsättningar för att kunna filtrera denna data baserat på olika parametrar. Detta innebar att en
@@ -113,7 +113,7 @@
             <div class="project2title">
                 <h3><i class="fa fa-github" aria-hidden="true"></i>Projekt 2: CustomsAid</h3>
             </div>
-            <div class="project2image"><img src="https://i.imgur.com/mnKCefV.png"></div>
+            <div class="project2image"><img src="https://i.imgur.com/OQXww6K.jpg"></div>
             <div class="project2description">
                 <p>Hobbyprojekt där användaren tillåts skapa och lagra försändelser i en databas, användaren har sedan
                     tillåtelse att justera eller ta bort dessa försändelser. Projektet skapades i ASP.NET MVC och det
@@ -124,7 +124,7 @@
             <div class="project3title">
                 <a href="https://github.com/RKMV8/Cineast"><h3><i class="fa fa-github" aria-hidden="true"></i>Projekt 3: Cineasterna</h3></a>
             </div>
-            <div class="project3image"><img src="https://i.imgur.com/l1JVokY.png"></div>
+            <div class="project3image"><img src="https://i.imgur.com/cJarZZ8.jpg"></div>
             <div class="project3description">
                 <p>Utvecklade en sida för filmentusiaster, målet var att populera sidan med toppfilmer baserat på
                     aktuell data från cMDB (Cineasterna Movie Database) och OMDb (Open Movie Database) API, utmaningen
