--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="headerpicture">
             <a href="https://github.com/RKMV8"><img
-                    src="images/GitHub-Mark-120px-plus.png"></a>
-                    <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img src="images/linkedin-icon-1.svg"></a>
+                    src="images/githublight.svg"></a>
+                    <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img src="images/linkedinlight.svg"></a>
         </div>
         <div class="headerdarkmode">
             <p id="lightbuttontext">Lightmode</p>
@@ -62,6 +62,7 @@
                     </ul>
                 </div>
             </div>
+            <hr>
             <div class="softskills">
                 <p>Jag har väldigt lätt för att lära mig nya saker, har en stor passion för allt som berör
                     programmering. Trivs som bäst när jag får arbeta i grupp mot ett gemensamt mål men fungerar utmärkt
@@ -81,11 +82,12 @@
                             filen i ett externt system i det önskade formatet.</p>
                 </div>
             </div>
+            <hr>
             <div class="studier">
                 <h1><i class="fa fa-graduation-cap" aria-hidden="true"></i>Utbildning</h1>
                 <p>Mittuniversitetet</p>
                 <p>Informatik med inriktning systemutveckling</p>
-                <p>Augusti 2019 - nuvarande</p>
+                <p><i class="fa fa-calendar" aria-hidden="true"></i>Augusti 2019 - nuvarande</p>
             </div>
         </div>
     </div>
@@ -105,7 +107,7 @@
                     skytt kunde sortera på exempelvis endast antal skott när de legat inne i ett specifikt
                     puls-intervall, eller hur träffsäkerheten ser ut när det är -21 grader utomhus. Arbetet hade stort
                     fokus på att använda existerande API:er och kombinera dessa för att skapa optimala förutsättningar
-                    att göra sorteringen.</p>
+                    att göra sorteringen.</p>       
             </div>
         </div>
         <div class="project2">
