Added bg div and adjusted scaling for content

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="wrapper">
     <header>
         <div class="headertext">
             <h1 id="dms">Rickard Vikström</h1>
@@ -19,8 +20,8 @@
         </div>
         <div class="headerpicture">
             <a href="https://github.com/RKMV8"><img
-                    src="images/githublight.svg"></a>
-                    <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img src="images/linkedinlight.svg"></a>
+                    src="images/githubdark.svg"></a>
+                    <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img src="images/linkedindark.svg"></a>
         </div>
         <div class="headerdarkmode">
             <p id="lightbuttontext">Lightmode</p>
@@ -29,7 +30,6 @@
                 <span class="slider round"></span>
             </label>
         </div>
-
     </header>
     <div class="maincontainer">
         <div class="item1">
@@ -133,5 +133,6 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
