Made some changes to darkmode/lightmode

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <p id="dms">Systemutvecklare</p>
         </div>
         <div class="headerpicture">
-            <a href="https://github.com/RKMV8"><img
+            <a href="https://github.com/RKMV8"><img id="githubimg"
                     src="images/githubdark.svg"></a>
-                    <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img src="images/linkedindark.svg"></a>
+                    <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img id="linkedinimg" src="images/linkedindark.svg"></a>
         </div>
         <div class="headerdarkmode">
             <p id="lightbuttontext">Lightmode</p>
