Further improved dark/light and overall css changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="https://www.linkedin.com/in/rickard-vikström-25aa701b9/"><img id="linkedinimg" src="images/linkedindark.svg"></a>
         </div>
         <div class="headerdarkmode">
-            <p id="lightbuttontext">Lightmode</p>
+            <p id="lightbuttontext">Light</p>
             <label class="switch">
                 <input id="check" type="checkbox" onclick="ToggleDarkMode()">
                 <span class="slider round"></span>
