Added "stack used" to each of the projects displayed

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="item1">
             <h1 id="item1h1">Vem är jag?</h1>
             <div class="aboutme">
+                
                 <div class="aboutmetext">
                     <p id="item1p">33-årig jämtlänning med ett brinnande it-intresse och en ständig törst efter att lära mig nya
                         saker. Min fritid spenderas tillsammans med familjen som består av mina barn och min sambo. Född och uppvuxen i Östersund, har provat livet i storstaden (Stockholm & Göteborg) men kommit fram till att jag hellre lever mitt liv i Jämtland!</p>
@@ -56,6 +57,7 @@
                 <div class="item2listsecond">
                     <ul>
                         <li>ASP.NET MVC</li>
+                        <li>React</li>
                         <li>Entity Framework</li>
                         <li>PostgreSQL</li>
                         <li>Windows & Linux/Unix</li>
@@ -101,13 +103,10 @@
                 <a href="https://github.com/RKMV8/AimtrackFilter"><h3><i class="fa fa-github" aria-hidden="true"></i>Projekt 1: Aimtracker Filter</h3></a>
             </div>
             <div class="project1image"><img src="https://i.imgur.com/6RoIEE2.jpg"></div>
+            <div class="stackused"><p>Stack: C#, ASP.NET MVC & PostgreSQL</p></div>
             <div class="project1description">
                 <p>Projektet gick ut på att vi skulle använda existerande skjutstatistik från skidskyttar och skapa
-                    förutsättningar för att kunna filtrera denna data baserat på olika parametrar. Detta innebar att en
-                    skytt kunde sortera på exempelvis endast antal skott när de legat inne i ett specifikt
-                    puls-intervall, eller hur träffsäkerheten ser ut när det är -21 grader utomhus. Arbetet hade stort
-                    fokus på att använda existerande API:er och kombinera dessa för att skapa optimala förutsättningar
-                    att göra sorteringen.</p>       
+                    förutsättningar för att kunna filtrera denna data baserat på olika parametrar, exempelvis träffsäkerhet inom ett specifikt puls-intervall.</p>       
             </div>
         </div>
         <div class="project2">
@@ -115,17 +114,20 @@
                 <h3><i class="fa fa-github" aria-hidden="true"></i>Projekt 2: CustomsAid</h3>
             </div>
             <div class="project2image"><img src="https://i.imgur.com/OQXww6K.jpg"></div>
+            <div class="stackused"><p>Stack: C#, ASP.NET MVC, PostgreSQL & React</p></div>
             <div class="project2description">
                 <p>Hobbyprojekt där användaren tillåts skapa och lagra försändelser i en databas, användaren har sedan
                     tillåtelse att justera eller ta bort dessa försändelser. Projektet skapades i ASP.NET MVC och det
-                    finns även stöd för att hämta samtliga eller enskilda försändelser via API. </p>
+                    finns även stöd för att hämta samtliga eller enskilda försändelser via API.  </p>
             </div>
         </div>
         <div class="project3">
             <div class="project3title">
                 <a href="https://github.com/RKMV8/Cineast"><h3><i class="fa fa-github" aria-hidden="true"></i>Projekt 3: Cineasterna</h3></a>
             </div>
+            
             <div class="project3image"><img src="https://i.imgur.com/cJarZZ8.jpg"></div>
+            <div class="stackused"><p>Stack: C# & ASP.NET MVC</p></div>
             <div class="project3description">
                 <p>Utvecklade en sida för filmentusiaster, målet var att populera sidan med toppfilmer baserat på
                     aktuell data från cMDB (Cineasterna Movie Database) och OMDb (Open Movie Database) API, utmaningen
